Reformatted code using black.

--- a/bengen_4%.ipynb
+++ b/bengen_4%.ipynb
@@ -153,10 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setAssetBalances(taxable=[0], \n",
-    "                      taxDeferred=[0],\n",
-    "                      taxFree=[1000000],\n",
-    "                      beneficiary=[1])\n",
+    "plan.setAssetBalances(taxable=[0], taxDeferred=[0], taxFree=[1000000], beneficiary=[1])\n",
     "plan.setName('Bengen 4% rule')"
    ]
   },
@@ -243,13 +240,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setInitialAR(taxable=[[50, 0, 50, 0]],\n",
-    "                  taxDeferred=[[50, 0, 50, 0]],\n",
-    "                  taxFree=[[50, 0, 50, 0]])\n",
+    "plan.setInitialAR(\n",
+    "    taxable=[[50, 0, 50, 0]], taxDeferred=[[50, 0, 50, 0]], taxFree=[[50, 0, 50, 0]]\n",
+    ")\n",
     "\n",
-    "plan.setFinalAR(taxable=[[50, 0, 50, 0]],\n",
-    "                taxDeferred=[[50, 0, 50, 0]],\n",
-    "                taxFree=[[50, 0, 50, 0]])\n",
+    "plan.setFinalAR(\n",
+    "    taxable=[[50, 0, 50, 0]], taxDeferred=[[50, 0, 50, 0]], taxFree=[[50, 0, 50, 0]]\n",
+    ")\n",
     "\n",
     "plan.interpolateAR('linear')"
    ]
@@ -346,7 +343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setSpousalSplit(1.)"
+    "plan.setSpousalSplit(1.0)"
    ]
   },
   {
