--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -158,10 +158,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setAssetBalances(taxable=[90000, 60000], \n",
-    "                      taxDeferred=[600000, 150000],\n",
-    "                      taxFree=[60000, 40000],\n",
-    "                      beneficiary=[1, 1])"
+    "plan.setAssetBalances(\n",
+    "    taxable=[90000, 60000],\n",
+    "    taxDeferred=[600000, 150000],\n",
+    "    taxFree=[60000, 40000],\n",
+    "    beneficiary=[1, 1],\n",
+    ")"
    ]
   },
   {
@@ -251,13 +253,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setInitialAR(taxable=[[0, 25, 50, 25], [0, 25, 50, 25]],\n",
-    "                  taxDeferred=[[50, 50, 0, 0], [60, 40, 0, 0]],\n",
-    "                  taxFree=[[100, 0, 0, 0], [100, 0, 0, 0]])\n",
+    "plan.setInitialAR(\n",
+    "    taxable=[[0, 25, 50, 25], [0, 25, 50, 25]],\n",
+    "    taxDeferred=[[50, 50, 0, 0], [60, 40, 0, 0]],\n",
+    "    taxFree=[[100, 0, 0, 0], [100, 0, 0, 0]],\n",
+    ")\n",
     "\n",
-    "plan.setFinalAR(taxable=[[0, 25, 50, 25], [0, 25, 50, 25]],\n",
-    "                taxDeferred=[[30, 50, 10, 10], [60, 40, 0, 0]],\n",
-    "                taxFree=[[30, 50, 10, 10], [60, 40, 0, 0]])\n",
+    "plan.setFinalAR(\n",
+    "    taxable=[[0, 25, 50, 25], [0, 25, 50, 25]],\n",
+    "    taxDeferred=[[30, 50, 10, 10], [60, 40, 0, 0]],\n",
+    "    taxFree=[[30, 50, 10, 10], [60, 40, 0, 0]],\n",
+    ")\n",
     "\n",
     "plan.interpolateAR('linear')\n",
     "plan.showAllocations()"
@@ -829,7 +835,7 @@
     "plan.setRates('realistic')\n",
     "plan2, conversions = arp.optimizeRoth(plan, 30)\n",
     "print(conversions)\n",
-    "plan2.run();\n",
+    "plan2.run()\n",
     "plan2.saveInstance('plan2', True)"
    ]
   },
@@ -876,7 +882,7 @@
    "source": [
     "# To save all configuration parameters\n",
     "arp.savePlan(plan, 'jack+jill')\n",
-    "             \n",
+    "\n",
     "# To create a new plan configured according to the parameters in configuration file.\n",
     "newplan = arp.readPlan('jack+jill')"
    ]
