--- a/mary+john.ipynb
+++ b/mary+john.ipynb
@@ -118,10 +118,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan1.setAssetBalances(taxable=[50000, 40000], \n",
-    "                      taxDeferred=[1000000, 400000],\n",
-    "                      taxFree=[100000, 50000],\n",
-    "                      beneficiary=[1, 1])"
+    "plan1.setAssetBalances(\n",
+    "    taxable=[50000, 40000],\n",
+    "    taxDeferred=[1000000, 400000],\n",
+    "    taxFree=[100000, 50000],\n",
+    "    beneficiary=[1, 1],\n",
+    ")"
    ]
   },
   {
@@ -281,13 +283,17 @@
    "source": [
     "myMethod = 's-curve'\n",
     "# myMethod = 'linear'\n",
-    "plan1.setInitialAR(taxable=[[65, 25, 5, 5], [65, 25, 5, 5]],\n",
-    "                  taxDeferred=[[65, 25, 5, 5], [65, 25, 5, 5]],\n",
-    "                  taxFree=[[65, 25, 5, 5], [65, 25, 5, 5]])\n",
+    "plan1.setInitialAR(\n",
+    "    taxable=[[65, 25, 5, 5], [65, 25, 5, 5]],\n",
+    "    taxDeferred=[[65, 25, 5, 5], [65, 25, 5, 5]],\n",
+    "    taxFree=[[65, 25, 5, 5], [65, 25, 5, 5]],\n",
+    ")\n",
     "\n",
-    "plan1.setFinalAR(taxable=[[50, 30, 5, 15], [50, 30, 5, 15]],\n",
-    "                taxDeferred=[[50, 30, 5, 15], [50, 30, 5, 15]],\n",
-    "                taxFree=[[50, 30, 5, 15], [50, 30, 5, 15]])\n",
+    "plan1.setFinalAR(\n",
+    "    taxable=[[50, 30, 5, 15], [50, 30, 5, 15]],\n",
+    "    taxDeferred=[[50, 30, 5, 15], [50, 30, 5, 15]],\n",
+    "    taxFree=[[50, 30, 5, 15], [50, 30, 5, 15]],\n",
+    ")\n",
     "\n",
     "plan1.interpolateAR(myMethod)\n",
     "plan1.setName('M&J uncoordinated')\n",
@@ -313,7 +319,9 @@
    "source": [
     "plan2 = arp.clone(plan1)\n",
     "# For coordination taking place for each individual separately.\n",
-    "plan2.setCoordinatedAR(initial=[[65, 25, 5, 5], [65, 25, 5, 5]], final=[[50, 30, 5, 15], [50, 30, 5, 15]])\n",
+    "plan2.setCoordinatedAR(\n",
+    "    initial=[[65, 25, 5, 5], [65, 25, 5, 5]], final=[[50, 30, 5, 15], [50, 30, 5, 15]]\n",
+    ")\n",
     "\n",
     "# An interpolation must follow either call for generating the data for all the years of the simulation.\n",
     "plan2.interpolateAR(myMethod)\n",
@@ -397,13 +405,13 @@
    "outputs": [],
    "source": [
     "for plan in plans:\n",
-    "    plan.showNetIncome();\n",
+    "    plan.showNetIncome()\n",
     "\n",
     "for plan in plans:\n",
-    "    plan.showSources();\n",
+    "    plan.showSources()\n",
     "\n",
     "for plan in plans:\n",
-    "    plan.showAccounts();\n"
+    "    plan.showAccounts();"
    ]
   },
   {
@@ -414,11 +422,10 @@
    "outputs": [],
    "source": [
     "for plan in plans:\n",
-    "    plan.showGrossIncome();\n",
+    "    plan.showGrossIncome()\n",
     "\n",
     "for plan in plans:\n",
-    "    plan.showTaxes();\n",
-    "  "
+    "    plan.showTaxes();"
    ]
   },
   {
@@ -430,8 +437,7 @@
    "source": [
     "for plan in plans:\n",
     "    plan.estate(25)\n",
-    "    plan.showAssetDistribution()\n",
-    "  "
+    "    plan.showAssetDistribution()"
    ]
   },
   {
