--- a/roth.ipynb
+++ b/roth.ipynb
@@ -132,10 +132,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setAssetBalances(taxable=[100000, 50000], \n",
-    "                       taxDeferred=[2000000, 400000],\n",
-    "                       taxFree=[120000, 25000],\n",
-    "                       beneficiary=[1, 1])"
+    "plan.setAssetBalances(\n",
+    "    taxable=[100000, 50000],\n",
+    "    taxDeferred=[2000000, 400000],\n",
+    "    taxFree=[120000, 25000],\n",
+    "    beneficiary=[1, 1],\n",
+    ")"
    ]
   },
   {
@@ -294,7 +296,7 @@
     "plan_fixed = arp.clone(plan, 'fixed realistic')\n",
     "plan_fixed.setRates('realistic')\n",
     "\n",
-    "plan_hist = arp.clone(plan, 'historical 1969')      \n",
+    "plan_hist = arp.clone(plan, 'historical 1969')\n",
     "plan_hist.setRates('historical', 1969)"
    ]
   },
@@ -353,7 +355,9 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "plan_fixed2, conversions_fixed = arp.optimizeRoth(plan_fixed, heirsTaxRate, minConv=100, startConv=128000)\n",
+    "plan_fixed2, conversions_fixed = arp.optimizeRoth(\n",
+    "    plan_fixed, heirsTaxRate, minConv=100, startConv=128000\n",
+    ")\n",
     "print(conversions_fixed)"
    ]
   },
@@ -423,7 +427,9 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "plan_hist2, conversions_hist = arp.optimizeRoth(plan_hist, heirsTaxRate, minConv=100, startConv=128000)\n",
+    "plan_hist2, conversions_hist = arp.optimizeRoth(\n",
+    "    plan_hist, heirsTaxRate, minConv=100, startConv=128000\n",
+    ")\n",
     "print(conversions_hist)"
    ]
   },
