--- a/template.ipynb
+++ b/template.ipynb
@@ -149,10 +149,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setAssetBalances(taxable=[90000, 40000], \n",
-    "                      taxDeferred=[1000000, 500000],\n",
-    "                      taxFree=[80000, 25000],\n",
-    "                      beneficiary=[1, 1])"
+    "plan.setAssetBalances(\n",
+    "    taxable=[90000, 40000],\n",
+    "    taxDeferred=[1000000, 500000],\n",
+    "    taxFree=[80000, 25000],\n",
+    "    beneficiary=[1, 1],\n",
+    ")"
    ]
   },
   {
@@ -238,13 +240,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setInitialAR(taxable=[[0, 25, 50, 25], [0, 25, 50, 25]],\n",
-    "                  taxDeferred=[[60, 40, 0, 0], [60, 40, 0, 0]],\n",
-    "                  taxFree=[[100, 0, 0, 0], [100, 0, 0, 0]])\n",
+    "plan.setInitialAR(\n",
+    "    taxable=[[0, 25, 50, 25], [0, 25, 50, 25]],\n",
+    "    taxDeferred=[[60, 40, 0, 0], [60, 40, 0, 0]],\n",
+    "    taxFree=[[100, 0, 0, 0], [100, 0, 0, 0]],\n",
+    ")\n",
     "\n",
-    "plan.setFinalAR(taxable=[[0, 25, 50, 25], [0, 25, 50, 25]],\n",
-    "                taxDeferred=[[60, 40, 0, 0], [60, 40, 0, 0]],\n",
-    "                taxFree=[[60, 40, 0, 0], [60, 40, 0, 0]])\n",
+    "plan.setFinalAR(\n",
+    "    taxable=[[0, 25, 50, 25], [0, 25, 50, 25]],\n",
+    "    taxDeferred=[[60, 40, 0, 0], [60, 40, 0, 0]],\n",
+    "    taxFree=[[60, 40, 0, 0], [60, 40, 0, 0]],\n",
+    ")\n",
     "\n",
     "plan.interpolateAR('linear')"
    ]
@@ -606,7 +612,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.estate(35)\n"
+    "plan.estate(35)"
    ]
   },
   {
