Consistent formatting in text.

--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -281,14 +281,19 @@
     "\n",
     "These advanced assets allocation strategies are done using the `setCoordinatedAR()` function call. There are two choices: one can provide a list of double entries, in which case the assets allocations for each spouse will be done separately. Here is one example:\n",
     "\n",
-    "    plan.setCoordinatedAR(initial=[[60, 30, 5, 5], [70, 30, 0, 0]],\n",
-    "                          final=[[50, 30, 5, 15], [40, 20, 15, 25]])\n",
+    "    plan.setCoordinatedAR(\n",
+    "        initial=[[60, 30, 5, 5], [70, 30, 0, 0]],\n",
+    "        final=[[50, 30, 5, 15], [40, 20, 15, 25]]\n",
+    "        )\n",
     "    \n",
     "where each spouse chose different allocation ratios. In this case, assets allocations will only be coordinated between accounts belonging to the same individual.\n",
     "\n",
     "This is in contrast with the next example, where accounts of both spouses will be coordinated together. This is done by providing a single set of ratios for each bound (*initial* and *final*):\n",
     "\n",
-    "    plan.setCoordinatedAR(initial=[60, 30, 5, 5], final=[50, 30, 5, 15])\n",
+    "    plan.setCoordinatedAR(\n",
+    "        initial=[60, 30, 5, 5],\n",
+    "        final=[50, 30, 5, 15]\n",
+    "        )\n",
     "    \n",
     "With these options, ARP Lab will try to pack as much stocks into the tax-free accounts, then into the tax-deferred accounts, then into the taxable accounts. For common assets, the reverse order is used and ARP Lab will attempt packing as much common assets in the taxable accounts, then the tax-deferred, etc. In these cases, the allocation ratios depend on the balance in each of the accounts, but the overall ratios of all savings accounts under consideration will be matching to one prescribed by the `setCoordinatedAR()` function. As the account balances will be evolving from one year to the other, so will the calculated ratios. At the end of a scenario, the calculated ratios can be saved in an Excel spreadsheet by using the `saveInstance()` function that will be introduced below.\n",
     "\n",
