minor text tweaks

--- a/bengen_4%.ipynb
+++ b/bengen_4%.ipynb
@@ -49,11 +49,11 @@
    "source": [
     "This notebook describes the case of Sam, a fictitious individual used for demonstrating the conditions required for the so-called 4% rule. This case considers no pension, no social security benefits, just a portfolio of a tax-free account with 50% stocks and 50% bounds. This scenario is then tested to survive sequences of historical rates, particularly the one which happened in 1966. The market in 1966 is peculiar in the sense that the following 17 years will be with a near-zero rate of return when one is considering inflation. This particular and exceptional sequence of returns makes it a worst-case scenario for testing the robustness of one's retirement plan. However, it is testing one's scenario with the most challenging set of historical rates, resulting in one planning for the worst case scenario. We would never leave our home if we were to live that way!\n",
     "\n",
-    "The article that popularized the 4% rule is from William Bengen (Journal of Financial Planning, October 1994). The scenarios used consist of looking at the longevity of a 50% common stocks and 50% intermediate-term Treasury notes portfolio under a variety of withdrawal rates and depending on the historical year that the individual started her retirement. Cases considered consisted of withdrawal rates from 1% to 6%, to be determined on the balance of a single tax-free account at the first year of retirement and then be indexed for inflation. These scenarios highlight the effect of sequence of returns through using historical data. Note that the income tax was not considered in the original paper. Neither was social security. Therefore, this is why we will assume that all the assets are in a tax-free Roth account.\n",
+    "The article that popularized the 4% rule is from William Bengen (Journal of Financial Planning, October 1994). The scenarios used consist of looking at the longevity of a 50% common stocks and 50% intermediate-term Treasury notes portfolio under a variety of withdrawal rates and depending on the historical year that the individual started her retirement. Cases considered consisted of withdrawal rates from 1% to 6%, to be determined on the balance of a retirement savings account at the first year of retirement and then be indexed for inflation. These scenarios highlight the effect of sequence of returns through using historical data. Note that income tax was not considered in the original paper. Neither was social security. Therefore, this is why we will assume that all the assets are in a tax-free Roth account.\n",
     "\n",
-    "The original claim is that a withdrawal rate of 4% of the portfolio at the first year of retirement would be sustainable for a 30-year retirement period. These initial withdrawals are then adjusted for inflation and no income tax is considered. As this scenario is meant to explore the effects of a percentage, we will use a round balance of \\\\$1 M in a tax-free account. Other portfolio balances of interest can be obtained with a simple multiplication. As we mentioned, we assume that the money is in a Roth account to avoid triggering the machinery of income tax as well as required minimum distributions.\n",
+    "The original claim is that a withdrawal rate of 4% of the portfolio at the first year of retirement would be sustainable for a 30-year retirement period over all know historical sequences of return. These initial withdrawals are then adjusted for inflation and no income tax is considered. As this scenario is meant to explore the effects of a percentage, we will use a round balance of \\\\$1 M in a tax-free account. Other portfolio balances of interest can be obtained with a simple multiplication. As we mentioned, we assume that the money is in a Roth account to avoid triggering the machineries of income tax and required minimum distributions.\n",
     "\n",
-    "Note that Bengen used data from Ibbotson's SBBI (Stocks, Bonds, Bills, Inflation) Yearbook while the data used in ARP Lab is from the NYU Stern business school. There will be slight discrepancies in the number of years that the accounts can sustain due to the slight difference in the rates used. As a results, the investment portfolios in ARP Lab last a little shorter than those originally obtained by Bengen. The trends and conclusions are the same however."
+    "Note that Bengen used data from Ibbotson's SBBI (Stocks, Bonds, Bills, Inflation) Yearbook while the data used in ARP Lab is from the NYU Stern business school. There will be slight discrepancies in the number of years that the accounts can sustain due to the slight difference in the rates used. As a results, the investment portfolios in ARP Lab last slightly less than those originally obtained by Bengen. The trends and conclusions are the same however."
    ]
   },
   {
@@ -493,7 +493,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showNetIncome('Sam 1966');"
+    "plan.showNetIncome('Sam 1966')"
    ]
   },
   {
@@ -512,7 +512,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showSources('Sam 1966');"
+    "plan.showSources('Sam 1966')"
    ]
   },
   {
@@ -531,7 +531,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showAccounts('Sam 1966');"
+    "plan.showAccounts('Sam 1966')"
    ]
   },
   {
@@ -608,7 +608,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showTaxes('Sam 1966');"
+    "plan.showTaxes('Sam 1966')"
    ]
   },
   {
@@ -629,7 +629,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showGrossIncome('Sam 1966');"
+    "plan.showGrossIncome('Sam 1966')"
    ]
   },
   {
@@ -648,7 +648,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showRates('Sam 1966');"
+    "plan.showRates('Sam 1966')"
    ]
   },
   {
