--- a/mary+john.ipynb
+++ b/mary+john.ipynb
@@ -411,7 +411,7 @@
     "    plan.showSources()\n",
     "\n",
     "for plan in plans:\n",
-    "    plan.showAccounts();"
+    "    plan.showAccounts()"
    ]
   },
   {
@@ -425,7 +425,7 @@
     "    plan.showGrossIncome()\n",
     "\n",
     "for plan in plans:\n",
-    "    plan.showTaxes();"
+    "    plan.showTaxes()"
    ]
   },
   {
