--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -430,7 +430,7 @@
     "\n",
     "    plan.setRates('realistic')\n",
     "\n",
-    "*Conservative* rates are lower than the last ten years as most analysts are predicting lower rates from the next decade. These values are fixed rates of 6.0% for the S&P 500, 4.0% for the Corporate bonds markets, 3.5% for the 10-year Treasury bonds, with an inflation at around 2.8%. Using these conservative rates can be achieved by using the following call:\n",
+    "*Conservative* rates are lower than the last ten years as most analysts are predicting lower rates from the next decade. These values are fixed rates of 6.0% for the S&P 500, 4.0% for the Corporate bonds markets, 3.5% for the 10-year Treasury notes, with an inflation at around 2.8%. Using these conservative rates can be achieved by using the following call:\n",
     "\n",
     "    plan.setRates('conservative')\n",
     "\n",
