Added units to input functions.

--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -148,7 +148,7 @@
    "id": "6ea4c5dc-f88d-47c5-a1ec-3474d023bf23",
    "metadata": {},
    "source": [
-    "Jack and Jill leave everything to each other as savings account beneficiaries as entered by [1, 1]. Jack has \\\\$90k in his taxable account, \\\\$600k in his 401k, and $60k in his Roth 401k and Roth IRAs. Jill has \\\\$60k in her savings bank account, \\\\$150k in a 403b, and \\\\$40k in Roth IRAs in which she contributed over the years."
+    "Jack and Jill leave everything to each other as savings account beneficiaries as entered by [1, 1]. Jack has \\\\$90k in his taxable account, \\\\$600k in his 401k, and $60k in his Roth 401k and Roth IRAs. Jill has \\\\$60k in her savings bank account, \\\\$150k in a 403b, and \\\\$40k in Roth IRAs in which she contributed over the years. We use the `units` optional keyword to indicate that the numbers are entered in thousands."
    ]
   },
   {
@@ -159,10 +159,11 @@
    "outputs": [],
    "source": [
     "plan.setAssetBalances(\n",
-    "    taxable=[90000, 60000],\n",
-    "    taxDeferred=[600000, 150000],\n",
-    "    taxFree=[60000, 40000],\n",
+    "    taxable=[90, 60],\n",
+    "    taxDeferred=[600, 150],\n",
+    "    taxFree=[60, 40],\n",
     "    beneficiary=[1, 1],\n",
+    "    units='k'\n",
     ")"
    ]
   },
@@ -182,7 +183,7 @@
     "| ... | | | | | | | | |\n",
     "|20XX | | | | | | | | |\n",
     "\n",
-    "Here, 20XX is the last row which should be the first year after the last spouse has passed based on the life expectancy values provided. For the columns, *anticipated wages* is the annual amount (gross minus tax-deferred contributions) that you anticipate to receive from employment or other sources (not including dividends from your taxable investment accounts). Note that column names are case sensitive and all of these entries must be in lower case. Best way to start this process is to use the template provided rightly named *template.xlsx*.\n",
+    "Here, 20XX is the last row which should be at least the first year after the last spouse has passed based on the life expectancy values provided. For example, if both spouses will live through 2050, the rows should go to at least 2051. For the columns, *anticipated wages* is the annual amount (gross minus tax-deferred contributions) that you anticipate to receive from employment or other sources (not including dividends from your taxable investment accounts). Note that column names are case sensitive and all of these entries must be in lower case. Best way to start this process is to use the template provided rightly named *template.xlsx*.\n",
     "\n",
     "For the purpose of this exercise, there is no clear definition of retirement age. There will be a year, however, from which you will stop having anticipated income, or diminished income due to decreasing your work load. This transition can be gradual or sudden. Therefore there is no need to enter a retirement age for the sole purpose of quantifying your financial future.\n",
     "\n",
@@ -324,13 +325,13 @@
    "metadata": {},
    "source": [
     "## What about anticipated fixed income?\n",
-    "Pension and social security are fixed income. Model here assumes that pension income is not inflation adjusted while social security benefits are (but ARP Lab can easily be modified to account for inflation-adjusted pensions). Numbers to be provided are the predicted amount for each spouse and the age of the commencement of benefits.\n",
+    "Pension and social security are fixed income. Model here assumes that pension income is not inflation adjusted while social security benefits are (but ARP Lab can easily be modified to account for inflation-adjusted pensions). Numbers to be provided are the predicted annual amount for each spouse and the age of the commencement of benefits.\n",
     "\n",
     "By default, no pension benefits are assumed. This can also be specified explicitly by entering zeros (0) as entries, as in\n",
     "\n",
     "    plan.setPension([0, 0], [65, 65])\n",
     "    \n",
-    "For social security, one must provide the predicted amount(s) and the starting age(s) at which benefits are anticipated to be received. There are plenty of social security benefit estimators on the web, including the info you can get directly from your own account at the Social Security Administration (ssa.gov). Another interesting calculator can be found at www.opensocialsecurity.com. This calculator allows you to compare different scenarios regarding your commencement age through a sensitivity plot.\n"
+    "For social security, one must provide the predicted annual amount(s) and the starting age(s) at which benefits are anticipated to be received. There are plenty of social security benefit estimators on the web, including the info you can get directly from your own account at the Social Security Administration (ssa.gov). Another interesting calculator can be found at www.opensocialsecurity.com. This calculator allows you to compare different scenarios regarding your commencement age through a sensitivity plot.\n"
    ]
   },
   {
@@ -348,9 +349,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setPension([0, 10000], [65, 65])\n",
+    "plan.setPension([0, 10], [65, 65], units='k')\n",
     "\n",
-    "plan.setSocialSecurity([28000, 25000], [70, 70])"
+    "plan.setSocialSecurity([28, 25], [70, 70], units='k')"
    ]
   },
   {
@@ -381,7 +382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setDesiredIncome(84000, 'smile')"
+    "plan.setDesiredIncome(84, 'smile', units='k')"
    ]
   },
   {
