--- a/mary+john.ipynb
+++ b/mary+john.ipynb
@@ -119,10 +119,11 @@
    "outputs": [],
    "source": [
     "plan1.setAssetBalances(\n",
-    "    taxable=[50000, 40000],\n",
-    "    taxDeferred=[1000000, 400000],\n",
-    "    taxFree=[100000, 50000],\n",
+    "    taxable=[50, 40],\n",
+    "    taxDeferred=[1000, 400],\n",
+    "    taxFree=[100, 50],\n",
     "    beneficiary=[1, 1],\n",
+    "    units='k'\n",
     ")"
    ]
   },
