--- a/roth.ipynb
+++ b/roth.ipynb
@@ -122,7 +122,7 @@
    "metadata": {},
    "source": [
     "## Assets balances in each type of savings accounts\n",
-    "Bonnie has \\\\$100 k in her taxable savings account, \\\\$2 M in her 401k, and \\\\$120 k in a Roth 401k account. Clyde has \\\\$50 k in his taxable savings account, \\\\$400 k in a 403b, and \\\\$25 k in a Roth IRA. They leave everything to each others, indicated by the full fraction 1.  as beneficiaries. This information is entered using the `setAssetsBalances()` function call as follows."
+    "Bonnie has \\\\$100 k in her taxable savings account, \\\\$2 M in her 401k, \\\\$120 k in a Roth 401k account, and \\\\$25 k in a Roth IRA. Clyde has \\\\$50 k in his taxable savings account, \\\\$400 k in a 403b, and \\\\$30 k in a Roth IRA. They leave everything to each others, indicated by the full fraction 1.  as beneficiaries. This information is entered using the `setAssetsBalances()` function call as follows."
    ]
   },
   {
@@ -133,10 +133,11 @@
    "outputs": [],
    "source": [
     "plan.setAssetBalances(\n",
-    "    taxable=[100000, 50000],\n",
-    "    taxDeferred=[2000000, 400000],\n",
-    "    taxFree=[120000, 25000],\n",
+    "    taxable=[100, 50],\n",
+    "    taxDeferred=[2000, 400],\n",
+    "    taxFree=[120+25, 30],\n",
     "    beneficiary=[1, 1],\n",
+    "    units='k'\n",
     ")"
    ]
   },
@@ -214,7 +215,7 @@
    "id": "c5a3f4ff-4911-4774-b509-f764ec66ce52",
    "metadata": {},
    "source": [
-    "Our couple believes that \\\\$120k net income can be sufficient for their needs. As they want to spend more at the beginning of their retirement, they opt for a *smile* spending profile."
+    "Our couple believes that \\\\$120 k net income can be sufficient for their needs. As they want to spend more at the beginning of their retirement, they opt for a *smile* spending profile."
    ]
   },
   {
@@ -224,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setDesiredIncome(120000, 'smile')"
+    "plan.setDesiredIncome(120, 'smile', units='k')"
    ]
   },
   {
@@ -233,7 +234,7 @@
    "metadata": {},
    "source": [
     "## Pension and social security\n",
-    "They have no pension, but both will receive a little over average for social security benefits (in 2023, the average social security benefits are about \\\\$22k for men and \\\\$18k for women). Clyde will take social security benefits at full retirement age, while Clyde will wait until age 70."
+    "They have no pension, but both will receive a little over average for social security benefits (in 2023, the average social security benefits are about \\\\$22 k for men and \\\\$18 k for women). Clyde will take social security benefits at full retirement age, while Clyde will wait until age 70."
    ]
   },
   {
@@ -244,7 +245,7 @@
    "outputs": [],
    "source": [
     "plan.setPension([0, 0], [65, 65])\n",
-    "plan.setSocialSecurity([35000, 27000], [70, 67])"
+    "plan.setSocialSecurity([35, 27.5], [70, 67], units='k')"
    ]
   },
   {
