--- a/bengen_4%.ipynb
+++ b/bengen_4%.ipynb
@@ -143,7 +143,7 @@
    "id": "6ea4c5dc-f88d-47c5-a1ec-3474d023bf23",
    "metadata": {},
    "source": [
-    "Sam has \\\\$1 M in a single tax-free account for a %4 withdrawal. We use a Roth account to avoid RMDs. Just multiply all numbers by $x$ in your head to get to a multiple of this \\\\$1 M account. "
+    "Sam has \\\\$1 M in a single tax-free account for a %4 withdrawal. We use a Roth account to avoid RMDs. Just multiply all numbers by $x$ in your head to get to a multiple of this \\\\$1 M account. We use the `units` keyword to indicate that we will input the data in millions."
    ]
   },
   {
@@ -153,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setAssetBalances(taxable=[0], taxDeferred=[0], taxFree=[1000000], beneficiary=[1])\n",
+    "plan.setAssetBalances(taxable=[0], taxDeferred=[0], taxFree=[1], beneficiary=[1], units='M')\n",
     "plan.setName('Bengen 4% rule')"
    ]
   },
