--- a/template.ipynb
+++ b/template.ipynb
@@ -173,7 +173,7 @@
     "| ... | | | | | | | | |\n",
     "|20XX | | | | | | | | |\n",
     "\n",
-    "Here, 20XX is the last row which should be the first year after the last spouse has passed based on the life expectancy values provided. For the columns, *anticipated wages* is the annual amount (gross wages minus tax-deferred contributions) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment accounts). Note that column names are case sensitive and all of these entries must be in lower case. Best way to start this process is to use the template provided rightly named *template.xlsx*.\n",
+    "Here, 20XX is the last row which should be at least the first year after the last spouse has passed based on the life expectancy values provided. For example, if both spouses will live through 2050, the rows should go to at least 2051. For the columns, *anticipated wages* is the annual amount (gross wages minus tax-deferred contributions) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment accounts). Note that column names are case sensitive and all of these entries must be in lower case. Best way to start this process is to use the template provided rightly named *template.xlsx*.\n",
     "\n",
     "For the purpose of this exercise, there is no clear definition of retirement age. There will be a year, however, from which you will stop having anticipated income, or diminished income due to decreasing your work load. This transition can be gradual or sudden. Therefore there is no need to enter a retirement age for the sole purpose of quantifying your financial future.\n",
     "\n",
@@ -185,7 +185,7 @@
     "\n",
     "The tab name for each spreadsheet represents the name of the spouse for reporting yearly transactions affecting the plan. In fact, ARP Lab uses the names of these tabs to determine the individuals' names.\n",
     "\n",
-    "Note that the file format from the (free) LibreOffice software can also be read, so you do not need to have an Excel license."
+    "Note that the file format from the (free) LibreOffice software can also be read, so you do not need to have an Excel license. However, you might have to install the `odfpy` package through `conda install odfpy` first."
    ]
   },
   {
@@ -310,13 +310,13 @@
    "metadata": {},
    "source": [
     "## What about anticipated fixed income?\n",
-    "Pension and social security are fixed income. Model here assumes that pension income is not inflation adjusted while social security benefits are (but ARP Lab can easily be modified to account for inflation-adjusted pensions). Numbers to be provided are the predicted amount for each spouse and the age of the commencement of benefits.\n",
+    "Pension and social security are fixed income. Model here assumes that pension income is not inflation adjusted while social security benefits are (but ARP Lab can easily be modified to account for inflation-adjusted pensions). Numbers to be provided are the predicted annual amount for each spouse and the age of the commencement of benefits.\n",
     "\n",
     "If there are no pension benefits, just use zeros (0) as entries, as in\n",
     "\n",
     "    plan.setPension([0, 0], [65, 65])\n",
     "    \n",
-    "For social security, one must provide the predicted amount(s) and the starting age(s) at which benefits are anticipated to be received. There are plenty of social security benefit estimators on the web, including the info you can get directly from your own account at the Social Security Administration (ssa.gov). Another interesting calculator can be found at www.opensocialsecurity.com. This last one allows you to compare different strategies through a sensitivity plot.\n"
+    "For social security, one must provide the predicted annual amount(s) and the starting age(s) at which benefits are anticipated to be received. There are plenty of social security benefit estimators on the web, including the info you can get directly from your own account at the Social Security Administration (ssa.gov). Another interesting calculator can be found at www.opensocialsecurity.com. This last one allows you to compare different strategies through a sensitivity plot.\n"
    ]
   },
   {
@@ -414,7 +414,7 @@
     "\n",
     "For the *realistic* case, values reported from MorningStar for the next ten years are used. This is done by using:\n",
     "\n",
-    "    plan.setRates('conservative')\n",
+    "    plan.setRates('realistic')\n",
     "\n",
     "*Conservative* rates are lower than the last ten years as most analysts are predicting lower rates from the next decade. These values are fixed rates of 6.0% for the S&P 500, 4.0% the Corporate bonds markets, 3.5% for the 10-year Treasury notes, with an inflation at around 2.8%. Using these conservative rates can be achieved by using the following call:\n",
     "\n",
