--- a/mary+john.ipynb
+++ b/mary+john.ipynb
@@ -177,7 +177,7 @@
    "outputs": [],
    "source": [
     "plan1.setPension([0, 0], [65, 65])\n",
-    "plan1.setSocialSecurity([30000, 26000], [70, 67])"
+    "plan1.setSocialSecurity([30, 26.5], [70, 67], units='k')"
    ]
   },
   {
@@ -193,7 +193,7 @@
    "id": "3b04bede-5b8a-44a9-a400-b7109c58441e",
    "metadata": {},
    "source": [
-    "Mary and John desire a net annual income of \\\\$80k."
+    "Mary and John desire a net annual income of \\\\$80 k."
    ]
   },
   {
@@ -203,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan1.setDesiredIncome(80000, 'smile')"
+    "plan1.setDesiredIncome(80, 'smile', units='k')"
    ]
   },
   {
