--- a/template.ipynb
+++ b/template.ipynb
@@ -150,10 +150,11 @@
    "outputs": [],
    "source": [
     "plan.setAssetBalances(\n",
-    "    taxable=[90000, 40000],\n",
-    "    taxDeferred=[1000000, 500000],\n",
-    "    taxFree=[80000, 25000],\n",
+    "    taxable=[90, 40],\n",
+    "    taxDeferred=[1000, 500],\n",
+    "    taxFree=[80, 25],\n",
     "    beneficiary=[1, 1],\n",
+    "    units='k'\n",
     ")"
    ]
   },
@@ -185,7 +186,7 @@
     "\n",
     "The tab name for each spreadsheet represents the name of the spouse for reporting yearly transactions affecting the plan. In fact, ARP Lab uses the names of these tabs to determine the individuals' names.\n",
     "\n",
-    "Note that the file format from the (free) LibreOffice software can also be read, so you do not need to have an Excel license. However, you might have to install the `odfpy` package through `conda install odfpy` first."
+    "Note that the file format from the (free) LibreOffice software can also be read, so you do not need to have an Excel license. However, you might have to install the `odfpy` package through `conda install odfpy` first, which might require the *conda-forge* channel to be added (`conda config --add channels conda-forge`)."
    ]
   },
   {
@@ -334,9 +335,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setPension([0, 10000], [65, 65])\n",
-    "\n",
-    "plan.setSocialSecurity([30000, 28000], [70, 70])"
+    "plan.setPension([0, 10], [65, 65], units='k')\n",
+    "plan.setSocialSecurity([30, 28], [70, 70], units='k')"
    ]
   },
   {
@@ -367,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setDesiredIncome(40000, 'smile')"
+    "plan.setDesiredIncome(40, 'smile', units='k')"
    ]
   },
   {
