--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -148,7 +148,7 @@
    "id": "6ea4c5dc-f88d-47c5-a1ec-3474d023bf23",
    "metadata": {},
    "source": [
-    "Jack and Jill leave everything to each other as savings account beneficiaries as entered by [1, 1]. Jack has \\\\$90k in his taxable account, \\\\$600k in his 401k, and $60k in his Roth 401k and Roth IRAs. Jill has \\\\$60k in her savings bank account, \\\\$150k in a 403b, and \\\\$40k in Roth IRAs in which she contributed over the years. We use the `units` optional keyword to indicate that the numbers are entered in thousands."
+    "Jack and Jill leave everything to each other as savings account beneficiaries as entered by [1, 1]. Jack has \\\\$90 k in his taxable account, \\\\$600 k in his 401k, and $50 k in his Roth 401k and \\\\$20 k in Roth IRAs. Jill has \\\\$60 k in her savings bank account, \\\\$150 k in a 403b, and \\\\$40 k in Roth IRAs in which she contributed over the years. We use the `units` optional keyword to indicate that the numbers are entered in thousands."
    ]
   },
   {
@@ -161,7 +161,7 @@
     "plan.setAssetBalances(\n",
     "    taxable=[90, 60],\n",
     "    taxDeferred=[600, 150],\n",
-    "    taxFree=[60, 40],\n",
+    "    taxFree=[50 + 20, 40],\n",
     "    beneficiary=[1, 1],\n",
     "    units='k'\n",
     ")"
@@ -195,7 +195,7 @@
     "\n",
     "The tab name for each spreadsheet represents the name of the spouse for reporting yearly transactions affecting the plan. In fact, ARP Lab extracts the names of these tabs to determine the individuals' names. Therefore, you need to rename these tabs to reflect your personal names if you want to accurately represent your case.\n",
     "\n",
-    "Note that the file format from the (free) LibreOffice software can also be read, so you do not need to have an Excel license."
+    "Note that the file format from the (free) LibreOffice software can also be read, so you do not need to have an Excel license. However, you might have to install the `odfpy` package through `conda install odfpy` first, which might require the *conda-forge* channel to be added (`conda config --add channels conda-forge`)."
    ]
   },
   {
@@ -339,7 +339,7 @@
    "id": "43bd9a2a-e2bf-434f-88ac-b0a70dcdd1fd",
    "metadata": {},
    "source": [
-    "Here, Jill has an unindexed pension of \\\\$10k per year. Both Jack and Jill believe they have good genes and decided to take their social security benefits at age 70. The amounts provided are estimation of the amounts they would receive at age 70. "
+    "Here, Jill has an unindexed pension of \\\\$10 k per year. Both Jack and Jill believe they have good genes and decided to take their social security benefits at age 70. The amounts provided are estimation of the amounts they would receive at age 70. "
    ]
   },
   {
